Rework the theme using Pico CSS

--- a/index.html
+++ b/index.html
@@ -3,18 +3,14 @@ layout: default
 pagination:
   enabled: true
 ---
-<h1>8-Bit Labs</h1>
-
 {% for post in paginator.posts %}
-<div class="paper container-lg post-list">
-  <article class="article">
-    <div class="article-content">
-      <h2 class="article-title"><a href="{{post.url | prepend: site.baseurl}}">{{post.title}}</a></h2>
-      <p>{{ post.content | strip_html | truncatewords: 32 }}</p>
-      <span class="article-meta">{{post.date | date: '%d %b %Y'}}</span>
-    </div>
-  </article>
-</div>
+<article>
+  <hgroup>
+    <h2><a href="{{post.url | prepend: site.baseurl}}">{{post.title}}</a></h2>
+    <h3>{{post.date | date: '%d %b %Y'}}</h3>
+  </hgroup>
+  <p>{{ post.content | strip_html | truncatewords: 32 }}</p>
+</article>
 {% endfor %}
 
 {% include pagination.html %}
